[metadata]
name = sahara_plugin_mapr
summary = Mapr Plugin for Sahara Project
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/sahara/latest/

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    sahara_plugin_mapr

[entry_points]
sahara.cluster.plugins =
    mapr    = sahara_plugin_mapr.plugins.mapr.plugin:MapRPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1
